# T5-47-Calendar

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
deploy/raspberry-pi/: README.md  install.sh  t5-calendar-helper.service
helper_service/: .env.example  .gitignore  README.md  auth_bootstrap.py  requirements.txt  server.py
main/: CMakeLists.txt  app_config.h  app_config_local.example.h  battery_monitor.c  battery_monitor.h  board_config.h  button_input.c  button_input.h  calendar_types.h  display_layer.c  display_layer.h  helper_service.c  helper_service.h  main.c  wifi_manager.c  wifi_manager.h
